Adds ids to the traces, runs several traces with the same model and saves the traces in a folder